@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Correctly mark quests as completed during state loading.
+Nicolas Weeger 2010-06-19
+
 Remove cf_darcap plugin, as everything is now done through Python scripts
 and the quest system.
 Nicolas Weeger 2010-06-19
